[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "goifer"
authors = [{name = "Stefan Oderbolz", email = "odi@metaodi.ch"}]
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "requests",
    "muzzle",
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "flake8",
    "mock",
    "responses",
    "pytest",
    "pytest-cov",
]
dev = [
    "flit",
    "pandas",
]


[project.urls]
Home = "https://github.com/metaodi/goifer"
